# cmathl

./: .appveyor.yml  .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  CMakeList.txt  CMakeLists.txt  CODING_STANDARD  CONTRIBUTING.md  LICENSE  README.md  _config.yml  appveyor.yml  clib.json  cml.spec.in  error.txt  index.md  install.sh  makefile  package.json
cml/: CMakeLists.txt
cml/include/: cml.h  cml.hpp  config.h
cml/include/cml/: block.h  bool.h  complex.h  const.h  default.h  deriv.h  diff.h  easings.h  errno.h  ieee.h  inline.h  machine.h  math.h  minmax.h  quaternion.h  roots.h  sort.h  specfunc.h  statistics.h  structures.h  tgmath.h  vector.h
cml/include/cml/_common/: bool.h  default.h  inline.h  machine.h
cml/include/cml/_private/: templates_on.h
cml/include/cml/block/: char.h  complex_double.h  complex_float.h  complex_long_double.h  double.h  float.h  int.h  long.h  long_double.h  quaternion_double.h  quaternion_float.h  quaternion_long_double.h  short.h  uchar.h  uint.h  ulong.h  ushort.h
cml/include/cml/complex/: basic.h  error.h  exponentiation.h  hyperbolic.h  trigonometric.h
cml/include/cml/const/: cgs.h  cgsm.h  mks.h  mksa.h  num.h
cml/include/cml/easings/: back.h  bounce.h  circular.h  cubic.h  elastic.h  exponential.h  linear.h  quadratic.h  quartic.h  quintic.h  sine.h
cml/include/cml/errno/: message.h
cml/include/cml/ieee/: endian.h  standardize.h  utils.h
cml/include/cml/math/: basic.h  bool.h  classification.h  complex.h  consts.h  error-gamma.h  exponential.h  fact.h  functions.h  generic.h  hyperbolic.h  nearest-integer.h  power.h  real.h  trigonometric.h  types.h
cml/include/cml/private/: templates_on.h
cml/include/cml/quaternion/: basic.h  classification.h  exponentiation.h  interpolation.h  parity.h  rotation.h
cml/include/cml/sort/: utils.h
cml/src/: CMakeLists.txt
cml/src/block/: CMakeLists.txt  source.c
cml/src/complex/: CMakeLists.txt  basic.c  complex.c  exponentiation.c  hyperbolic.c  init.c  trigonometric.c
cml/src/deriv/: CMakeLists.txt  deriv.c
cml/src/diff/: CMakeLists.txt  diff.c
cml/src/easings/: CMakeLists.txt  back.c  bounce.c  circular.c  cubic.c  elastic.c  exponential.c  linear.c  quadratic.c  quartic.c  quintic.c  sine.c
cml/src/errno/: CMakeLists.txt  error.c  message.c  stream.c  strerrno.c
cml/src/ieee/: CMakeLists.txt  endian.c  make_rep.c  print.c  standardize.c
cml/src/math/: CMakeLists.txt  _basic.c  _built.c  _classification.c  _poleval.c  atan.c  atanh.c  basic.c  classification.c  complex.c  cos.c  exp.c  expm1.c  exponential.c  fact.c  floor.c  frexp.c  hyperbolic.c  init.c  ldexp.c  log.c  nearest-integer.c  pow.c  power.c  real.c  sin.c  trigonometric.c
cml/src/quaternion/: CMakeLists.txt  basic.c  classification.c  exponentiation.c  init.c  interpolation.c  parity.c  rotation.c
cml/src/roots/: CMakeLists.txt  bisection.c  brent.c  newton.c
cml/src/sort/: CMakeLists.txt  README  heapsort.c  heapsortind.c  qsort.c  source.c
cml/src/specfunc/: CMakeLists.txt  cgamma.c  choose.c  fact.c  gamma.c  hyperg_u.c
cml/src/statistics/: CMakeLists.txt  README  source.c
cml/src/structures/: quaternion.c
cml/src/vector/: CMakeLists.txt  minmax.c
docs/: CML.md  (+5 more)
src/: CMakeList.txt  CMakeLists.txt  cml.h  cml.hpp  config.h  config.h.cmake  version.h
src/bits/: functions.c
src/cml/: easings.h  math.h  structures.h  version.h
src/cml/easings/: bounce.c  circular.c  elastic.c  quartic.c  quintic.c
src/cml/include/: easings.h  math.h
src/cml/math/: complex_arg.c  complex_cos.c  complex_cosh.c  complex_cot.c  complex_exp.c  complex_inverse.c  complex_log.c  complex_scalar_prod.c  complex_sin.c  complex_sinh.c  complex_tan.c  real.c  real_abs.c  real_acos.c  real_acosh.c  real_add.c  real_ared.c  real_asin.c  real_asinh.c  real_atan.c  real_atan2.c  real_atanh.c  real_ceil.c  real_cos.c  real_cosh.c  real_cot.c  real_coth.c  real_csc.c  real_csch.c  real_div.c  real_div_e.c  real_equals.c  real_exp.c  real_floor.c  real_inverse.c  real_isgreater_or_equals.c  real_isinteger.c  real_isless.c  real_isless_or_equals.c  real_isnatural.c  (+17 more)
src/cml/structures/: quaternion.c
src/easings/: back.c  bounce.c  circular.c  cubic.c  elastic.c  exponential.c  linear.c  quadratic.c  quartic.c  quintic.c  sine.c
src/easings/include/: back.h  bounce.h  circular.h  cubic.h  elastic.h  exponential.h  functions.h  linear.h  quadratic.h  quartic.h  quintic.h  sine.h
src/generic/: functions.h
src/math/: complex.c  complex_abs.c  complex_add.c  complex_arg.c  complex_conjugate.c  complex_cos.c  complex_cosh.c  complex_cot.c  complex_csc.c  complex_div.c  complex_exp.c  complex_inverse.c  complex_log.c  complex_log_b.c  complex_prod.c  complex_scalar_prod.c  complex_sec.c  complex_sin.c  complex_sinh.c  complex_sub.c  complex_tan.c  complex_tanh.c  real.c  real_abs.c  real_acos.c  real_acosh.c  real_add.c  real_ared.c  real_asin.c  real_asinh.c  real_atan.c  real_atan2.c  real_atanh.c  real_ceil.c  real_cos.c  real_cosh.c  real_cot.c  real_coth.c  real_csc.c  real_csch.c  (+30 more)
src/math/functions/: complex_abs.c  complex_add.c  complex_arg.c  complex_conjugate.c  complex_cos.c  complex_cosh.c  complex_cot.c  complex_csc.c  complex_div.c  complex_exp.c  complex_inverse.c  complex_log.c  complex_log_b.c  complex_prod.c  complex_scalar_prod.c  complex_sec.c  complex_sin.c  complex_sinh.c  complex_sub.c  complex_tan.c  complex_tanh.c  functions.c  real_abs.c  real_add.c  real_ared.c  real_atan.c  real_atan2.c  real_atanh.c  real_ceil.c  real_cos.c  real_cosh.c  real_cot.c  real_coth.c  real_csc.c  real_csch.c  real_div.c  real_div_e.c  real_equals.c  real_exp.c  real_floor.c  (+26 more)
src/math/include/: consts.h  functions.h  math.h  types.h
src/math/types/: complex.c  rational.c  real.c
src/structures/: quaternion.c
src/utils/: series_resolver.c
src/utils/include/: series_resolver.h
test/: CMakeList.txt  CMakeLists.txt  README  complex.c  deriv.c  diff.c  easings.c  main.c  quaternion.c  real.c  roots.c  structures.c
test/data/: complex.sce
test/include/: test.h
test/src/: main.c
(+290 files in other folders)
