cmake_minimum_required(VERSION 3.0)

PROJECT(cml
	LANGUAGES C
	VERSION 1.9.5.0)


INCLUDE(${CMAKE_SOURCE_DIR}/cmake/CPackConfig.cmake)
CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/cml.spec.in" "${CMAKE_CURRENT_BINARY_DIR}/cml.spec" @ONLY IMMEDIATE)
SET(CPACK_RPM_USER_BINARY_SPECFILE "${CMAKE_CURRENT_BINARY_DIR}/cml.spec")
SET(CPACK_PACKAGE_RELEASE 2)
SET(CPACK_RPM_PACKAGE_SOURCES ON)
INCLUDE(CPack)

INCLUDE(${CMAKE_SOURCE_DIR}/cmake/CMLFlags.cmake)

ADD_SUBDIRECTORY("cml")

OPTION(CML_BUILD_TESTS "Build unit tests" ON)
IF(CML_BUILD_TESTS)
	enable_testing()
	ADD_SUBDIRECTORY("test")
ENDIF(CML_BUILD_TESTS)

INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/README.md" DESTINATION share/doc/libcml/)
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/docs/CML.md" DESTINATION share/doc/libcml/docs/)
INSTALL(FILES "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE" DESTINATION share/licenses/libcml/)
