INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/cml/include)

INCLUDE(../cmake/CMakeBuildFlags.cmake)

IF(CML_BUILD_SHARED)
	ADD_EXECUTABLE(test_cml_shared main.c complex.c deriv.c diff.c easings.c quaternion.c real.c roots.c)
	TARGET_LINK_LIBRARIES(test_cml_shared cml ${LIBM})
	ADD_TEST(NAME test_cml_shared COMMAND test_cml_shared)
	IF (MSVC)
		add_custom_command(TARGET test_cml_shared POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE_DIR:cml>/$<TARGET_FILE_NAME:cml> $<TARGET_FILE_DIR:test_cml_shared>)
		IF (CMAKE_BUILD_TYPE==Debug)
			add_custom_command(TARGET test_cml_shared POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${cml_BINARY_DIR}/cml*.pdb" $<TARGET_FILE_DIR:test_cml_shared>)
		ENDIF()
	ENDIF()
ENDIF()

IF(CML_BUILD_STATIC)
	ADD_EXECUTABLE(test_cml_static main.c complex.c deriv.c diff.c easings.c quaternion.c real.c roots.c)
	TARGET_LINK_LIBRARIES(test_cml_static cml_static ${LIBM})
	ADD_TEST(NAME test_cml_static COMMAND test_cml_static)
ENDIF()
