INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/cml/include)

INCLUDE(../cmake/CMakeBuildFlags.cmake)

IF(CML_BUILD_SHARED)
	ADD_EXECUTABLE(test_cml_shared_complex complex.c)
	ADD_EXECUTABLE(test_cml_shared_deriv deriv.c)
	ADD_EXECUTABLE(test_cml_shared_diff diff.c)
	ADD_EXECUTABLE(test_cml_shared_easings easings.c)
	ADD_EXECUTABLE(test_cml_shared_quaternion quaternion.c)
	ADD_EXECUTABLE(test_cml_shared_real real.c)
	ADD_EXECUTABLE(test_cml_shared_roots roots.c)

	TARGET_LINK_LIBRARIES(test_cml_shared_complex cml ${LIBM})
	TARGET_LINK_LIBRARIES(test_cml_shared_deriv cml ${LIBM})
	TARGET_LINK_LIBRARIES(test_cml_shared_diff cml ${LIBM})
	TARGET_LINK_LIBRARIES(test_cml_shared_easings cml ${LIBM})
	TARGET_LINK_LIBRARIES(test_cml_shared_quaternion cml ${LIBM})
	TARGET_LINK_LIBRARIES(test_cml_shared_real cml ${LIBM})
	TARGET_LINK_LIBRARIES(test_cml_shared_roots cml ${LIBM})

	ADD_TEST(NAME test_cml_shared_complex COMMAND test_cml_shared_complex)
	ADD_TEST(NAME test_cml_shared_deriv COMMAND test_cml_shared_deriv)
	ADD_TEST(NAME test_cml_shared_diff COMMAND test_cml_shared_diff)
	ADD_TEST(NAME test_cml_shared_easings COMMAND test_cml_shared_easings)
	ADD_TEST(NAME test_cml_shared_quaternion COMMAND test_cml_shared_quaternion)
	ADD_TEST(NAME test_cml_shared_real COMMAND test_cml_shared_real)
	ADD_TEST(NAME test_cml_shared_roots COMMAND test_cml_shared_roots)

	IF (MSVC)
		add_custom_command(TARGET test_cml_shared POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different $<TARGET_FILE_DIR:cml>/$<TARGET_FILE_NAME:cml> $<TARGET_FILE_DIR:test_cml_shared>)
		IF (CMAKE_BUILD_TYPE==Debug)
			add_custom_command(TARGET test_cml_shared POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different "${cml_BINARY_DIR}/cml*.pdb" $<TARGET_FILE_DIR:test_cml_shared>)
		ENDIF()
	ENDIF()
ENDIF()

IF(CML_BUILD_STATIC)
	ADD_EXECUTABLE(test_cml_static_complex complex.c)
	ADD_EXECUTABLE(test_cml_static_deriv deriv.c)
	ADD_EXECUTABLE(test_cml_static_diff diff.c)
	ADD_EXECUTABLE(test_cml_static_easings easings.c)
	ADD_EXECUTABLE(test_cml_static_quaternion quaternion.c)
	ADD_EXECUTABLE(test_cml_static_real real.c)
	ADD_EXECUTABLE(test_cml_static_roots roots.c)

	TARGET_LINK_LIBRARIES(test_cml_static_complex cml_static ${LIBM})
	TARGET_LINK_LIBRARIES(test_cml_static_deriv cml_static ${LIBM})
	TARGET_LINK_LIBRARIES(test_cml_static_diff cml_static ${LIBM})
	TARGET_LINK_LIBRARIES(test_cml_static_easings cml_static ${LIBM})
	TARGET_LINK_LIBRARIES(test_cml_static_quaternion cml_static ${LIBM})
	TARGET_LINK_LIBRARIES(test_cml_static_real cml_static ${LIBM})
	TARGET_LINK_LIBRARIES(test_cml_static_roots cml_static ${LIBM})

	ADD_TEST(NAME test_cml_static_complex COMMAND test_cml_static_complex)
	ADD_TEST(NAME test_cml_static_deriv COMMAND test_cml_static_deriv)
	ADD_TEST(NAME test_cml_static_diff COMMAND test_cml_static_diff)
	ADD_TEST(NAME test_cml_static_easings COMMAND test_cml_static_easings)
	ADD_TEST(NAME test_cml_static_quaternion COMMAND test_cml_static_quaternion)
	ADD_TEST(NAME test_cml_static_real COMMAND test_cml_static_real)
	ADD_TEST(NAME test_cml_static_roots COMMAND test_cml_static_roots)
ENDIF()
